[gd_scene load_steps=13 format=3 uid="uid://cq6e3jxtyo3pg"]

[ext_resource type="Script" path="res://components/environment/water/water_manager.gd" id="1_m0gg3"]
[ext_resource type="Material" uid="uid://cf5yq4x0wcvie" path="res://components/environment/water/materials/water_material.tres" id="2_qvuod"]
[ext_resource type="Script" path="res://components/environment/water/buoyancy/simple_floatable_body_3d.gd" id="6_j0p7e"]
[ext_resource type="Script" path="res://components/environment/water/buoyancy/floatable_body_3d.gd" id="7_ao8n7"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_dg6xg"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_ybham"]
sky_material = SubResource("ProceduralSkyMaterial_dg6xg")

[sub_resource type="Environment" id="Environment_4qnob"]
background_mode = 2
sky = SubResource("Sky_ybham")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="QuadMesh" id="QuadMesh_0ap60"]
size = Vector2(100, 100)
subdivide_width = 400
subdivide_depth = 400

[sub_resource type="BoxMesh" id="BoxMesh_yuul3"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_cpesu"]
points = PackedVector3Array(0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5)

[sub_resource type="BoxMesh" id="BoxMesh_xftti"]
size = Vector3(3, 0.2, 5)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_3j1wq"]
points = PackedVector3Array(1.5, 0.1, 2.5, 1.5, -0.1, 2.5, 1.5, 0.1, -2.5, -1.5, 0.1, 2.5, -1.5, -0.1, 2.5, 1.5, -0.1, -2.5, -1.5, 0.1, -2.5, -1.5, -0.1, -2.5)

[node name="WaterManager" type="Node" node_paths=PackedStringArray("water")]
script = ExtResource("1_m0gg3")
water = NodePath("Water")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.174286, 0.468641, 0.464773, -0.626188, 0.625999, 0.184354, 0.759943, 0.623298, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_4qnob")

[node name="Water" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -1, 0)
material_override = ExtResource("2_qvuod")
mesh = SubResource("QuadMesh_0ap60")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.973273, -0.0434115, 0.225509, -0.0484678, 0.921022, 0.386483, -0.224477, -0.387083, 0.894303, 9.01999, 9.39742, 20.9036)
cull_mask = 1048573

[node name="Camera3D2" type="Camera3D" parent="."]
transform = Transform3D(-0.965601, -0.142174, 0.217719, -0.0484678, 0.921022, 0.386482, -0.255472, 0.362635, -0.896231, -5.35656, 9.39742, -29.4126)
cull_mask = 1048573

[node name="FloatableBody3D" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.26618, 0)
mass = 4.0
can_sleep = false
linear_damp = 4.0
angular_damp = 4.0
constant_force = Vector3(8, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="FloatableBody3D"]
transform = Transform3D(0.99928, 0.0243764, 0.0290593, -0.0265674, 0.996633, 0.0775651, -0.0270707, -0.0782813, 0.996564, 0, 0.227479, 0)
mesh = SubResource("BoxMesh_yuul3")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="FloatableBody3D"]
transform = Transform3D(0.99928, 0.0243764, 0.0290593, -0.0265674, 0.996633, 0.0775651, -0.0270707, -0.0782813, 0.996564, 0, 0.227479, 0)
shape = SubResource("ConvexPolygonShape3D_cpesu")

[node name="SimpleFloatableBody3D" type="Node3D" parent="FloatableBody3D" node_paths=PackedStringArray("body")]
script = ExtResource("6_j0p7e")
body = NodePath("..")

[node name="FloatableBody3D2" type="RigidBody3D" parent="."]
transform = Transform3D(-0.475023, -0.36655, -0.799997, -0.187145, 0.930398, -0.315176, 0.859843, 0, -0.510558, 4.63383, 3.7138, -5.37251)
mass = 4.0
can_sleep = false
linear_damp = 4.0
angular_damp = 4.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="FloatableBody3D2"]
transform = Transform3D(0.99928, 0.0243764, 0.0290593, -0.0265674, 0.996633, 0.0775651, -0.0270707, -0.0782813, 0.996564, 0, 0.227479, 0)
mesh = SubResource("BoxMesh_yuul3")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="FloatableBody3D2"]
transform = Transform3D(0.99928, 0.0243764, 0.0290593, -0.0265674, 0.996633, 0.0775651, -0.0270707, -0.0782813, 0.996564, 0, 0.227479, 0)
shape = SubResource("ConvexPolygonShape3D_cpesu")

[node name="SimpleFloatableBody3D" type="Node3D" parent="FloatableBody3D2" node_paths=PackedStringArray("body")]
script = ExtResource("6_j0p7e")
body = NodePath("..")

[node name="FloatableBody3D3" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.73162, 4.4417, -10.5676)
mass = 4.0
can_sleep = false
linear_damp = 4.0
angular_damp = 4.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="FloatableBody3D3"]
mesh = SubResource("BoxMesh_xftti")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="FloatableBody3D3"]
shape = SubResource("ConvexPolygonShape3D_3j1wq")

[node name="FloatableBody3D" type="Node3D" parent="FloatableBody3D3" node_paths=PackedStringArray("body")]
script = ExtResource("7_ao8n7")
body = NodePath("..")

[node name="Marker3D" type="Marker3D" parent="FloatableBody3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.52201, 0, -2.42535)

[node name="Marker3D2" type="Marker3D" parent="FloatableBody3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.53569, 0, -2.37821)

[node name="Marker3D3" type="Marker3D" parent="FloatableBody3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.56725, 0, 2.43044)

[node name="Marker3D4" type="Marker3D" parent="FloatableBody3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.57894, 0, 2.38523)
